--- a/MPP/Assignment/.classpath
+++ b/MPP/Assignment/.classpath
@@ -6,6 +6,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Data House/MIU/Class/FPP/Proff. Asad/Jar/jars/junit-4.10.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Java-FX"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
